Working registration with tests

--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,8 @@ WTForms = "==2.2.1"
 sqlalchemy = "*"
 mypy = "*"
 mysqlclient = "*"
+flask-login = "*"
+flask-bcrypt = "*"
 
 [requires]
 python_version = "3.6"
