--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -5,6 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mariadb:
+        image: mariadb:latest
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: sockschat
+          MYSQL_PASSWORD: password
+          MYSQL_DATABASE: socks_test
+          MYSQL_ROOT_PASSWORD: test
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
@@ -18,13 +29,6 @@ jobs:
       - name: Set environment variables
         run: |
           export test_database='{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-      - uses: mirromutth/mysql-action@v1.1
-        with:
-          mysql version: "8.0"
-          mysql database: "socks_test"
-          mysql root password: "test"
-          mysql user: "sockschat"
-          mysql password: "test"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
