Adjusting environment variables

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,10 +26,6 @@ jobs:
       - name: Install necessary system packages
         run: |
           sudo apt-get install python3.6-dev libmysqlclient-dev
-      - name: Set environment variables
-        run: |
-          export test_database='{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          export database='{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -45,6 +41,9 @@ jobs:
       - name: Test with pytest
         run: |
           pipenv run pytest tests --cov=app
+        env:
+          database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
+          test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
