--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -5,18 +5,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      mariadb:
-        image: mariadb:latest
-        ports:
-          - 3306
-        env:
-          MYSQL_USER: sockschat
-          MYSQL_PASSWORD: test
-          MYSQL_DATABASE: socks_test
-          MYSQL_ROOT_PASSWORD: test
-        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
@@ -42,8 +30,8 @@ jobs:
         run: |
           pipenv run pytest tests --cov=app
         env:
-          database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
+          database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
+          test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
