--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -8,6 +8,14 @@ jobs:
     services:
       mariadb:
         image: mariadb:latest
+        ports:
+          - 3306
+        env:
+          MYSQL_USER: sockschat
+          MYSQL_PASSWORD: test
+          MYSQL_DATABASE: socks_test
+          MYSQL_ROOT_PASSWORD: test
+        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
       - uses: actions/checkout@v2
@@ -34,8 +42,8 @@ jobs:
         run: |
           pipenv run pytest tests --cov=app
         env:
-          database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
-          test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
+          database: '{"username":"sockschat","password":"test","server":"%","database":"socks_test"}'
+          test_database: '{"username":"sockschat","password":"test","server":"%","database":"socks_test"}'
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
