--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -10,11 +10,6 @@ jobs:
         image: mariadb:latest
         ports:
           - 3306
-        env:
-          MYSQL_USER: sockschat
-          MYSQL_PASSWORD: test
-          MYSQL_DATABASE: socks_test
-          MYSQL_ROOT_PASSWORD: test
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
@@ -42,8 +37,8 @@ jobs:
         run: |
           pipenv run pytest tests --cov=app
         env:
-          database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
+          database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
+          test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"test"}'
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
