--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -10,6 +10,11 @@ jobs:
         image: mariadb:latest
         ports:
           - 3306
+        env:
+          MYSQL_USER: sockschat
+          MYSQL_PASSWORD: test
+          MYSQL_DATABASE: socks_test
+          MYSQL_ROOT_PASSWORD: test
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
