--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,7 +9,7 @@ jobs:
       mariadb:
         image: mariadb:latest
         ports:
-          - 3306
+          - 3306:3306
         env:
           MYSQL_USER: sockschat
           MYSQL_PASSWORD: test
@@ -38,15 +38,12 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Update MySQL Password
-          run: |
-          mysql -h 127.0.0.1 --port 3306 -u root -ppassword -e "ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY 'test';"
       - name: Test with pytest
         run: |
           pipenv run pytest tests --cov=app
         env:
-          database: '{"username":"root","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          test_database: '{"username":"root","password":"test","server":"127.0.0.1","database":"socks_test"}'
+          database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
+          test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
           port: ${{ job.services.mariadb.ports[3306] }}
       - name: Coveralls
         uses: coverallsapp/github-action@master
