--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,7 +9,7 @@ jobs:
       mariadb:
         image: mariadb:latest
         ports:
-          - 13306:3306
+          - 3306:3306
         env:
           MYSQL_USER: sockschat
           MYSQL_PASSWORD: test
@@ -18,6 +18,8 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
+      - name: Shutdown Ubuntu MySQL
+        run: sudo service mysql stop
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
         uses: actions/setup-python@v1
@@ -44,7 +46,7 @@ jobs:
         env:
           database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
           test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          port: ${{ job.services.mariadb.ports[13306] }}
+          port: ${{ job.services.mariadb.ports[3306] }}
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
