--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -5,21 +5,10 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    services:
-      mariadb:
-        image: mariadb:latest
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_USER: sockschat
-          MYSQL_PASSWORD: test
-          MYSQL_DATABASE: socks_test
-          MYSQL_ROOT_PASSWORD: test
-        options: --health-cmd="mysqladmin ping" --health-interval=5s --health-timeout=2s --health-retries=3
 
     steps:
-      - name: Shutdown Ubuntu MySQL
-        run: sudo service mysql stop
+      - name: Create database
+        run: mysql -uroot -proot -e "CREATE DATABASE socks_test;"
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
         uses: actions/setup-python@v1
@@ -44,9 +33,8 @@ jobs:
         run: |
           pipenv run pytest tests --cov=app
         env:
-          database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          test_database: '{"username":"sockschat","password":"test","server":"127.0.0.1","database":"socks_test"}'
-          port: ${{ job.services.mariadb.ports[3306] }}
+          database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
+          test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
