--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
+          pip install python-coveralls
           pipenv install --dev
       - name: Lint with flake8
         run: |
@@ -37,3 +38,6 @@ jobs:
           test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           secret_key: secret_key123
           drop_tables: False
+      - name: Coveralls
+      run: |
+        coveralls
