--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -30,16 +30,13 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
+      - name: Test with pytest, report to Coveralls
         run: |
           pipenv run pytest tests --cov=app
+          coveralls
         env:
           database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           secret_key: secret_key123
           drop_tables: False
-      - name: Coveralls
-        run: |
-          coveralls
-        env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
