--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pipenv
-          pip install coveralls
           pipenv install --dev
+          pipenv install coveralls
       - name: Lint with flake8
         run: |
           pip install flake8
@@ -33,7 +33,7 @@ jobs:
       - name: Test with pytest, report to Coveralls
         run: |
           pipenv run pytest tests --cov=.
-          coveralls
+          pipenv run coveralls
         env:
           database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
