--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,7 +32,8 @@ jobs:
       - name: Test with pytest, report to Coveralls
         run: |
           pipenv run pytest tests --cov=.
-          pipenv run coveralls
+          echo "Token is > ${COVERALLS_REPO_TOKEN}"
+          pipenv run coveralls --verbose
         env:
           database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
