--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,10 +32,11 @@ jobs:
       - name: Test with pytest, report to Coveralls
         run: |
           pipenv run coverage run --source=. -m pytest tests
-          pipenv run coveralls --verbose
+          pipenv run coveralls --service github-actions
         env:
           database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           test_database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
           secret_key: secret_key123
           drop_tables: False
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          GITHUB_ACTIONS: true
