--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -31,7 +31,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest, report to Coveralls
         run: |
-          pipenv run coverage run --source=. -m pytest tests
+          pipenv run coverage run --source=. --omit="*/tests*" -m pytest tests
           pipenv run coveralls --service github-actions
         env:
           database: '{"username":"root","password":"root","server":"127.0.0.1","database":"socks_test"}'
