--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/home/alexwtrimpe/.local/share/virtualenvs/python-chat-CgdGeLLB/bin/python"
+    "python.pythonPath": "/home/alexwtrimpe/.local/share/virtualenvs/python-chat-CgdGeLLB/bin/python",
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": true
 }
