--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -8,7 +8,9 @@ jobs:
 
     steps:
       - name: Create database
-        run: mysql -uroot -proot -e "CREATE DATABASE socks_test;"
+        run: |
+        sudo systemctl start mysql
+        mysql -uroot -proot -e "CREATE DATABASE socks_test;"
       - uses: actions/checkout@v2
       - name: Set up Python 3.6
         uses: actions/setup-python@v1
